parser/testdata/invalid/missing_equals.oc
# Error: assignment without the = operator.
model gpt4 {
  provider "openai"
}
